--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,6 @@
     src: url('./fonts/GTWalsheimPro-Light.ttf')
 }
 
-
-
-
-
 body {
     display: grid;
     margin: 0;
@@ -47,8 +43,6 @@ body {
     width: 200px;
     
 }
-
-
 
 .containerNav nav a{
     text-decoration: none;
@@ -164,7 +158,7 @@ body {
 }
 
 .contact-form {
-    width: 100%;
+    min-width: 100%;
     padding-right: 20px;
   }
 
@@ -208,6 +202,8 @@ body {
 textarea.input100 {
     min-height: 169px;
     padding: 20px 0 0 20px;
+    min-width: 400px;
+    max-width: 400px;
   }
 
   .focus-input {
@@ -412,3 +408,29 @@ textarea.input100 {
 .m-r-6 {
     margin-right: 6px;
 }    
+
+.scroll-up {
+  position: fixed;
+  right: 1%;
+  bottom: 3%;
+  cursor: pointer;
+}
+
+.up-arrow {
+  width: 2rem;
+  height: 2rem;
+}
+
+.socials {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  right: 1%;
+  bottom: 40%;
+  gap: 25px;
+}
+
+.socicon {
+  width: 2.5rem;
+  height: 2.5rem;
+}
