--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,9 @@
 body {
     display: grid;
     margin: 0;
-    background-image: url("./background.jpg");
+    background-image: url("./background1.jpg");
+    background-size: cover;
+    backdrop-filter: contrast(0.5);
 }
 
 .containerNav {
@@ -37,11 +39,10 @@ body {
 .picture-header {
     display: flex;
     padding-top: 35px;
+    padding-left: 20px;
 }
 .picture-header img {
-    height: 200px;
-    width: 200px;
-    
+    width: 60px;
 }
 
 .containerNav nav a{
@@ -55,9 +56,9 @@ body {
 .main-section
 {
     box-sizing: border-box;
-    height: 700px;
+    min-height: 700px;
 }
-.project-section,
+#projectsection,
 .contact-section {
     height: 800px;
     box-sizing: border-box;
@@ -426,7 +427,7 @@ textarea.input100 {
   flex-direction: column;
   position: fixed;
   right: 1%;
-  bottom: 40%;
+  bottom: 75%;
   gap: 25px;
 }
 
@@ -434,3 +435,104 @@ textarea.input100 {
   width: 2.5rem;
   height: 2.5rem;
 }
+
+
+@media screen and (max-width: 720px) {
+  
+  .containerNav {
+    justify-content: center;
+    gap: 27px;
+    margin-bottom: 50px;
+  }
+  .picture-header {
+    padding-top: 18px;
+    padding-left: 0;
+  }
+  .picture-header img {
+    width: 50px;
+  }
+  .containerNav nav {
+    padding-right: 0;
+    gap: 20px;
+  }
+  .containerNav nav a {
+    font-size: 18px;
+  }
+  
+  /* main container below */
+
+  .main-container {
+    align-items: flex-end;
+  }
+  .main-container h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+  .main-container p {
+    padding-left: 0;
+    font-size: 21px;
+    line-height: 30px;
+  }
+
+  /* my projects below */
+
+  .title2 h1 {
+    font-size: 40px;
+    margin-bottom: revert;
+
+}
+ .project-container {
+    flex-wrap: wrap;
+    padding-bottom: 50px;
+    height: unset;
+  }
+  #projectsection {
+    min-height: 800px;
+    height: unset;
+  }
+  .img {
+    width: 150px;
+    height: 150px;
+  }
+
+
+
+/*contact section below */
+.contact-section {
+  min-height: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-title {
+  font-size: 40px;
+}
+.contact-container {
+   width: 200px;
+   display: flex;
+   justify-content: center;
+}
+.form-container {
+
+}
+.contact-input {
+  width: 200px;
+}
+textarea.input100 {
+  min-width: 200px;
+  max-width: 200px;
+}
+.container-btn {
+  padding-left: 0;
+}
+
+
+/* social below */
+.socicon {
+  width: 2.2rem;
+  height: 2.2rem;
+}
+.socials {
+  right: 1.5%;
+}
+} 
