--- a/styles/style.css
+++ b/styles/style.css
@@ -499,10 +499,11 @@ textarea.input100 {
 
 /*contact section below */
 .contact-section {
-  min-height: 800px;
+  min-height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: unset;
 }
 .form-title {
   font-size: 40px;
@@ -529,10 +530,16 @@ textarea.input100 {
 
 /* social below */
 .socicon {
-  width: 2.2rem;
-  height: 2.2rem;
+
 }
 .socials {
   right: 1.5%;
+  bottom: 80%;
 }
+
+.scroll-up {
+  
+}
+
+
 } 
