--- a/styles/style.css
+++ b/styles/style.css
@@ -527,6 +527,13 @@ textarea.input100 {
   padding-left: 0;
 }
 
+.form-btn {
+  min-width: 110px;
+  height: 45px;
+}
+.container-btn {
+  padding-top: 0;
+}
 
 /* social below */
 .socicon {
@@ -534,12 +541,13 @@ textarea.input100 {
 }
 .socials {
   right: 1.5%;
-  bottom: 80%;
+  bottom: 82.5%;
+  gap: 28px;
 }
 
 .scroll-up {
-  
+  right: 3%;
 }
 
-
 } 
+
