--- a/styles/style.css
+++ b/styles/style.css
@@ -461,7 +461,9 @@ textarea.input100 {
 
 
 @media screen and (max-width: 720px) {
-  
+  html {
+    overflow-x: hidden;
+  }
   .containerNav {
     justify-content: space-between;
     gap: 27px;
