--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@ nav ul {
 {
     box-sizing: border-box;
     min-height: 800px;
+    padding-top: 120px;
 }
 #projectsection,
 .contact-section {
@@ -88,7 +89,7 @@ nav ul {
     display: flex;
     height: 99%;
     width: 70%;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     border-bottom: solid;
     margin-right: auto;
@@ -124,8 +125,8 @@ nav ul {
 .img {
     height: 200px;
     width: 200px;
-    border: 2px solid #8f8fa1;
     border-radius: 5px;
+    box-shadow: 0 0 20px rgb(0 0 0 / 70%);
 }
 
 .title2 {
@@ -221,7 +222,8 @@ nav ul {
     font-size: 18px;
     color: black;
     line-height: 1.2;
-    border: 2px solid #8f8fa1;
+    box-shadow: 0 0 10px rgb(0 0 0 / 75%);
+
   }
 
   input.input100 {
@@ -429,10 +431,11 @@ textarea.input100 {
   }
   
   textarea:focus, input:focus {
-    background-color: rgb(235, 255, 254)  ;
-    border: 3px solid #8f8fa1 !important;
+    background-color: rgb(244, 250, 250)  ;
     color: black;
     font-weight: 500;
+    box-shadow: 0 0 10px rgb(0 0 0 / 90%);
+
   }
 
   input {
@@ -503,7 +506,7 @@ textarea.input100 {
 .containerNav nav a:focus  {
   color: #8f8fa1;
   text-decoration: underline;
-  font-size: 140%;
+  font-size: 145%;
 }
 
 .myproject:hover {
@@ -562,7 +565,7 @@ Media content below max 550px
   html {
     height: 100%;
   }
-  
+
   .main-body {
     overflow-x: hidden;
     background-image: url("/styles/mobilebcg.jpg");
@@ -592,6 +595,7 @@ Media content below max 550px
   /* main container below */
   .main-section {
     min-height: 600px;
+    padding-top: unset;
   }
   .main-container {
     justify-content: unset;
@@ -783,7 +787,7 @@ a.kofi-button {
 
 
 
-@media screen and (min-width: 550px) and (max-width: 980px) {
+@media screen and (min-width: 550px) and (max-width: 1024px) {
   html {
     height: 100%;
   }
@@ -813,10 +817,17 @@ a.kofi-button {
   .containerNav nav a {
     font-size: 18px;
   }
+
+  nav ul {
+    top: 45px !important;
+    left: 70% !important;
+    width: 28% !important;
+  }
   
   /* main container below */
   .main-section {
-    min-height: 600px;
+    min-height: 500px;
+    padding-top: unset;
   }
   .main-container {
     justify-content: unset;
@@ -854,14 +865,15 @@ a.kofi-button {
     flex-wrap: wrap;
     padding-bottom: 50px;
     height: unset;
+    min-height: 600px;
   }
   #projectsection {
-    min-height: 800px;
+    min-height: 600px;
     height: unset;
   }
   .img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
   }
 
   
