--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,13 @@ html {
 .swal2-styled.swal2-confirm {
   border-radius: 10% !important;
   font-family: 'GTWalsheimPro-Light', sans-serif;
+  background-color: black !important;
 }
+.swal2-styled.swal2-confirm:focus,
+.swal2-styled.swal2-confirm:hover {
+  box-shadow: unset;
+}
+
 
 body {
     display: grid;
