--- a/styles/style.css
+++ b/styles/style.css
@@ -75,15 +75,7 @@ nav ul {
     display: flex;
     padding-top: 35px;
     padding-left: 20px;
-}/*
-.picture-header.show {
-  display: flex;
-  padding-top: 35px;
-  padding-left: 20px;
-  visibility: visible;
-  transform: translateY(0%);
-  transition: transform 0.5s ease-in;
-}*/
+}
 
 .picture-header img {
     width: 60px;
@@ -640,9 +632,10 @@ Media content below max 550px
   .main-container h1 {
     font-size: 36px;
     line-height: 50px;
-    padding-top: 45px;
+    padding-top: 39px;
     min-width: 100% !important;
     padding-left: unset;
+    padding-bottom: 1em;
   }
   #mytitle {
     white-space: unset;
@@ -650,8 +643,8 @@ Media content below max 550px
 
   .main-container p {
     padding-left: 0;
-    font-size: 21px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 28px;
   }
 
   /*
@@ -887,6 +880,7 @@ a.kofi-button {
     min-width: 100% !important;
     white-space: unset;
     padding-left: unset;
+    padding-bottom: 1em;
   }
 
   #mytitle {
