--- a/styles/style.css
+++ b/styles/style.css
@@ -725,8 +725,8 @@ textarea.input100 {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   padding: 2px;
-  width: 2.2rem;
-  height: 2.2rem;
+  width: 2rem;
+  height: 2rem;
 }
 .socials {
   right: unset;
@@ -738,7 +738,7 @@ textarea.input100 {
 }
 
 .scroll-up {
-  right: 4%;
+  right: 3%;
 }
 
 nav ul {
@@ -810,7 +810,10 @@ a.kofi-button {
   font-size: 18px;
 }
 
-
+.socials a:focus,
+.socials img:hover {
+  transform: scale(1);
+}
 
 
 
@@ -1052,19 +1055,6 @@ a.kofi-button {
 
 
 }
-
-
-
-
-.animate {
-  bottom: -50px;
-}
-
-.sticky {
-  bottom:unset;
-}
-
-
 
 
 
