--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,15 @@
     font-family: 'GTWalsheimPro-Light';
     src: url('./fonts/GTWalsheimPro-Light.ttf')
 }
+@font-face {
+  font-family: 'Libre Franklin';
+  src: url('./fonts/LibreFranklin-Light.ttf')
+}
 
+*{
+  scroll-behavior: smooth;
+  text-decoration: none;
+}
 
 html {
   overflow-x: hidden;
@@ -42,12 +50,56 @@ html {
   box-shadow: unset;
 }
 
+.firstScreen {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  z-index: 98;
+  flex-direction: column;
+  font-size: 30px;
+  text-align: center;
+  font-family: 'Libre Franklin', sans-serif;
+}
+.highlight {
+  color: black;
+}
+.firstBtn {
+  padding: 10px 18px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: 18px;
+  font-family: 'Libre Franklin', sans-serif;
+  border-radius: 5px;
+  text-decoration: none;
+}
+.arrowBtn {
+  height: 20px;
+  transform: rotate(90deg);
+  
+}
+.firstBtn:hover .arrowBtn {
+  transform: rotate(180deg);
+  transition: transform 0.4s;
+  filter: invert(1);
+}
+.firstBtn:hover {
+  background-color: black;
+  color: white;
+}
+
+
+
+
 
 body {
     display: grid;
     margin: 0;
-    background-image: url("./whitebackground.jpg");
-    background-size: cover;
+    background: linear-gradient(to right bottom, rgb(255, 255, 255), rgb(242, 242, 242) 50%);
 }
 .header {
   box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
@@ -58,8 +110,14 @@ body {
     justify-content: space-between;
     height: 80px;
     align-items: center;
+    padding: 10px 10px 0px 10px;
 }
-
+.logoText {
+  font-family: "GTWalsheimPro-Light";
+  color: black;
+  margin: 0;
+  font-size: 40px;
+}
 .containerNav nav {
     display: flex;
     gap: 40px;
@@ -69,14 +127,14 @@ body {
 nav ul {
   display: flex;
   list-style-type: none;
-  gap: 40px;
+  gap: 30px;
   color: white;
-  font-family: 'Pitchsans-Semibold', sans-serif;
+  font-weight: 600;
+  font-family: "GTWalsheimPro-Light", sans-serif;
 }
 
 .picture-header {
     display: flex;
-    padding-top: 35px;
     padding-left: 20px;
 }
 
@@ -90,8 +148,7 @@ nav ul {
     text-decoration: none;
     list-style-type: none;
     color: black;
-    font-size: 22px;
-    font-family: 'Pitchsans-Semibold', sans-serif;
+    font-size: 20px;
 }
 
 .main-section
@@ -527,8 +584,7 @@ textarea.input100 {
 .containerNav nav a:hover,
 .containerNav nav a:focus  {
   color: #8f8fa1;
-  text-decoration: underline;
-  font-size: 145%;
+  transform: scale(1.2);
 }
 
 .myproject:hover {
@@ -597,12 +653,25 @@ Media content below max 550px
     font-size: 0.9rem !important;
   }
 
+  .firstScreen {
+    font-size: 18px;
+  }
+  .firstBtn {
+    font-size: 14px;
+  }
+  .logoText {
+    position: fixed;
+    top: 1%;
+    left: 4%;
+    z-index: 100;
+    font-size: 35px;
+  }
+
 
 
   .main-body {
     overflow-x: hidden;
-    background-image: url("/styles/mobilebcg.jpg");
-    background-size: cover;
+    background-attachment: fixed;
   }
   
   .containerNav {
@@ -611,18 +680,21 @@ Media content below max 550px
     margin-bottom: 50px;
   }
   .picture-header {
-    padding-top: 18px;
-    padding-left: 8px;
+    padding-left: 10px;
   }
-  .picture-header img {
-    width: 50px;
-  }
+
   .containerNav nav {
     padding-right: 0;
     gap: 20px;
   }
   .containerNav nav a {
     font-size: 18px;
+  }
+  .burger-menu {
+    position: fixed;
+    top: 1%;
+    right: 1%;
+    z-index: 98;
   }
   
   /* main container below */
@@ -756,19 +828,19 @@ nav ul {
   left: 0%;
   width: 100%;
   text-align: center;
-  transform: translateY(-120%);
-  transition: transform 0.8s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  transform: translateX(120%);
+  transition: .6s ease-in-out;
   -webkit-overflow-scrolling: touch;
   padding-left: 0;
   border-radius: 5px;
   display: flex;
   justify-content: center;
-  opacity: 0.97;
   padding-right: unset;
-  z-index: 3;
-  gap: 40px;
+  z-index: 99;
+  gap: 20px;
   margin-top: 0;
+  box-shadow: 0 0 10px rgb(0 0 0 / 90%);
+  font-family: "GTWalsheimPro-Light";
 }
  nav ul li {
   margin: 10px;
@@ -782,10 +854,10 @@ nav a {
 
 .xbutton {
   position: fixed;
-  right: 5%;
-  top: 3%;
+  right: 4%;
+  top: 2%;
   width: 35px;
-  height: auto;
+  height: 30px;
   display: unset;
 }
 
