--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,6 @@
     src: url('./fonts/PitchSans-Semibold.ttf');
 }
 @font-face {
-    font-family: 'Superior Title Black Regular';
-    src: url('./fonts/Superior Title Black Regular.ttf')
-}
-@font-face {
     font-family: 'GT Walsheim Pro Bold Regular';
     src: url('./fonts/GT Walsheim Pro Bold Regular.ttf')
 }
@@ -18,10 +14,22 @@
   font-family: 'Libre Franklin';
   src: url('./fonts/LibreFranklin-Light.ttf')
 }
+@font-face {
+  font-family: 'Poppins';
+  src: url('./fonts/Poppins-Thin.ttf')
+}
+@font-face {
+  font-family: 'Graphik';
+  src: url('./fonts/Graphik-Semibold.ttf')
+}
+
+
 
 *{
   scroll-behavior: smooth;
   text-decoration: none;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -61,14 +69,17 @@ html {
   flex-direction: column;
   font-size: 30px;
   text-align: center;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Libre Franklin';
+  gap: 10px;
+  color: white;
+
 }
 .highlight {
-  color: black;
+  color: #d00202;
 }
 .firstBtn {
   padding: 10px 18px;
-  border: 1px solid black;
+  border: 1px solid white;
   display: flex;
   align-items: center;
   gap: 15px;
@@ -76,31 +87,38 @@ html {
   font-family: 'Libre Franklin', sans-serif;
   border-radius: 5px;
   text-decoration: none;
+  color: white;
 }
 .arrowBtn {
   height: 20px;
+  filter: invert(1);
   transform: rotate(90deg);
-  
+  filter: invert(1);
+
 }
 .firstBtn:hover .arrowBtn {
   transform: rotate(180deg);
   transition: transform 0.4s;
-  filter: invert(1);
+  filter: invert(0);
+
 }
 .firstBtn:hover {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 
 
 
 
-body {
+.main-body {
     display: grid;
     margin: 0;
-    background: linear-gradient(to right bottom, rgb(255, 255, 255), rgb(242, 242, 242) 50%);
+    /*background: linear-gradient(to right bottom, rgb(255, 255, 255), rgb(242, 242, 242) 50%);*/
+    width: 100%;
+    background-color: #000;
 }
+
 .header {
   box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
 }
@@ -108,13 +126,13 @@ body {
 .containerNav {
     display: flex;
     justify-content: space-between;
-    height: 80px;
+    height: 100px;
     align-items: center;
     padding: 10px 10px 0px 10px;
 }
 .logoText {
   font-family: "GTWalsheimPro-Light";
-  color: black;
+  color: white;
   margin: 0;
   font-size: 40px;
 }
@@ -147,100 +165,122 @@ nav ul {
 .containerNav nav a{
     text-decoration: none;
     list-style-type: none;
-    color: black;
+    color: white;
     font-size: 20px;
 }
 
-.main-section
-{
+.main-section {
     box-sizing: border-box;
     min-height: 800px;
-    padding-top: 120px;
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
 }
+.main-section,
 #projectsection,
 .contact-section {
-    min-height: 850px;
-    box-sizing: border-box;
+  padding-top: 100px;
+  min-height: 90vh;
+  box-sizing: border-box;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+
 }
 
 .main-container {
     display: flex;
-    height: 99%;
-    width: 70%;
+    height: 90%;
+    width: 85%;
+    padding-top: 150px;
     justify-content: flex-start;
-    align-items: flex-start;
-    border-bottom: solid;
-    margin-right: auto;
-    margin-left: auto;
-    flex-direction: column;
     min-inline-size: min-content;
     white-space: pre;
+    flex-direction: column;
+    gap: 40px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.main-container h1 {
+#mytitle {
     font-family: 'GT Walsheim Pro Bold Regular';
-    font-size: 64px;
-    line-height: 88px;
-    padding-left: 70px;
-    padding-bottom: 1.6em;
-    margin-top: 0%;
-    max-width: 900px;
-    
+    font-size: 12px;
+    max-width: 900px;   
+    display: flex;
+    justify-content: flex-end;
+    margin-left: auto;
+    color: white;
+   
 }
 
-#mytitle{
-  white-space: pre;
+.aboutMe {
+  font-size: 70px;
+  color: white;
+  font-family: 'Poppins';
 }
-
 
 .main-container p {
     font-size: 26px;
     margin-top: 0px;
-    padding-left: 73px;
-    line-height: 40px;
-    font-family: 'GTWalsheimPro-Light';
+    line-height: 50px;
+    font-family: 'Poppins';
+    font-weight: bolder;
+    color: white;
+    margin-left: auto;
 }
 
 .img {
     height: 200px;
-    width: 200px;
+    width: 300px;
     border-radius: 5px;
     box-shadow: 0 0 20px rgb(0 0 0 / 70%);
+    display: none;
 }
 
 .title2 {
-    text-align: center;
     font-family: 'GT Walsheim Pro Bold Regular';
+    font-size: 12px;
+    padding-bottom: 70px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: auto;
+    color: white;
 }
-.title2 h1 {
-    font-size: 45px;
-    margin-bottom: 0;
-}
+
 
 .project-container {
     display: flex;
-    height: 85%;
-    width: 70%;
+    height: 80%;
+    width: 90%;
+    flex-direction: column;
     margin-right: auto;
-    margin-left: auto;
     justify-content: space-around;
-    align-items: center;
-    border-bottom: solid;
-    gap: 40px;
 }
 
+
+
 .text {
-    font-size: 22px;
-    font-family: 'GTWalsheimPro-Light';
-    width: 200px;
-    text-align: center;
+    font-size: 70px;
+    align-self: center !important;
+    font-family: 'Graphik';
+    color: white;
+}
+.text:hover {
+  transform: translateX(30px);
+  transition: all .4s cubic-bezier(0.2, 0.6, 0.2, 1);
+  cursor: pointer;
+}
+.pText {
+  color: #d00202;
+  font-size: 20px;
 }
 
 .project {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    margin-right: auto;
 }
 
 .img2 {
@@ -272,14 +312,15 @@ nav ul {
   }
 
 .form-title {
-    display: block;
     font-family: 'GT Walsheim Pro Bold Regular';
-    font-size: 45px;
+    font-size: 16px;
     color: #000000;
-    line-height: 1.2;
-    text-align: center;
-    padding-bottom: 49px;
-    margin-top: 30px;
+    padding-left: 70px;
+    padding-bottom: 150px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: auto;
+    color: white;
   }
 
 .contact-input {
@@ -295,7 +336,7 @@ nav ul {
     display: block;
     width: 100%;
     background: #fff;
-    border-radius: 31px;
+    border-radius: 15px;
     font-family: "GTWalsheimPro-Light";
     font-size: 18px;
     color: black;
@@ -313,8 +354,8 @@ nav ul {
 textarea.input100 {
     min-height: 169px;
     padding: 20px 0 0 20px;
-    min-width: 400px;
-    max-width: 400px;
+    min-width: 346px;
+    max-width: 346px;
   }
 
   .focus-input {
@@ -384,7 +425,9 @@ textarea.input100 {
         position: relative;
         z-index: 1;
   }
-
+  .form-btn span {
+    color: black;
+  }
   .form-btn::before {
     content: "";
     display: block;
@@ -399,8 +442,8 @@ textarea.input100 {
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
-    border-radius: 31px;
-    background-color: #827ffe;
+    border-radius: 15px;
+    background-color: #ffffff;
     pointer-events: none;
     
     -webkit-transition: all 0.4s;
@@ -556,6 +599,8 @@ textarea.input100 {
   bottom: 3%;
   cursor: pointer;
   visibility: hidden;
+  filter: invert(1);
+
 }
 
 .up-arrow {
@@ -567,18 +612,23 @@ textarea.input100 {
   display: flex;
   flex-direction: column;
   position: fixed;
-  right: 1.5%;
-  bottom: 45%;
-  gap: 25px;
+  left: 1%;
+  bottom: 7%;
+  align-items: center;
+  filter: invert(1);
 }
 
 .socicon {
-  width: 2.5rem;
-  height: 2.5rem;
-  box-shadow: 0 0 5px rgb(0 0 0 / 50%);
-  border-radius: 50%;
-  padding: 3px;
+  width: 1.7rem;
+  height: 1.7rem;
 }
+.line {
+  height: 60px;
+  position: fixed;
+  left: 1%;
+  width: 27px;
+}
+
 
 
 .containerNav nav a:hover,
@@ -593,7 +643,8 @@ textarea.input100 {
 
 .socials a:focus,
 .socials img:hover {
-  transform: scale(1.3);
+  transform: translateY(-2px);
+  transition: transform .3s ease-in-out;
 }
 
 .picture-header a:focus,
@@ -616,6 +667,88 @@ textarea.input100 {
 .xbutton {
   display: none;
 }
+
+
+
+#loader {
+  position: absolute;
+  z-index: 1;
+  width: 160px;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 2px solid #000000;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 1s linear infinite;
+  
+}
+
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loader-text {
+    position: fixed;
+    font-size: 40px;
+    font-family: 'GTWalsheimPro-Light';
+    
+}
+
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  z-index: 150;
+  
+}
+
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1.2s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:0px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom: 0px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+
+.main-body {
+  display: none;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -715,9 +848,7 @@ Media content below max 550px
     padding-left: unset;
     padding-bottom: 1em;
   }
-  #mytitle {
-    white-space: unset;
-  }
+  
 
   .main-container p {
     padding-left: 0;
