--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@ html {
 .dark.firstBtn:hover .arrowBtn {
   filter: invert(1);
 }
+.dark.firstScreen {
+  background-color: white;
+}
 
 .swal2-popup {
   border-radius: 6px !important;
@@ -102,7 +105,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(255, 255, 255);
+  background-color: black;
   z-index: 98;
   flex-direction: column;
   font-size: 30px;
@@ -138,7 +141,6 @@ html {
   transform: rotate(180deg);
   transition: transform 0.4s;
   filter: invert(0);
-
 }
 .firstBtn:hover {
   background-color: white;
@@ -252,7 +254,7 @@ nav ul {
 }
 #mytitle {
     font-family: 'GT Walsheim Pro Bold Regular';
-    font-size: 12px;
+    font-size: 14px;
     max-width: 900px;   
     display: flex;
     justify-content: flex-end;
@@ -287,7 +289,7 @@ nav ul {
 
 .title2 {
     font-family: 'GT Walsheim Pro Bold Regular';
-    font-size: 12px;
+    font-size: 14px;
     padding-bottom: 70px;
     display: flex;
     justify-content: flex-end;
@@ -867,7 +869,6 @@ Media content below max 550px
   .containerNav {
     justify-content: space-between;
     gap: 27px;
-    margin-bottom: 50px;
   }
   .picture-header {
     padding-left: 10px;
@@ -885,32 +886,35 @@ Media content below max 550px
     top: 1%;
     right: 1%;
     z-index: 98;
+    filter: invert(1);
   }
-  
+  .dark.burger-menu {
+    filter: invert(0);
+  }
   /* main container below */
   .main-section {
     min-height: 600px;
-    padding-top: unset;
+    padding-top: 80px;
   }
   .main-container {
     justify-content: unset;
     white-space: unset;
+    padding-top: 20px;
   }
   
   .main-container h1 {
-    font-size: 36px;
+    font-size: 30px;
     line-height: 50px;
-    padding-top: 39px;
+    padding-top: 70px;
     min-width: 100% !important;
     padding-left: unset;
-    padding-bottom: 1em;
   }
   
 
   .main-container p {
     padding-left: 0;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 18px;
+    line-height: 24px;
   }
 
   /*
@@ -918,15 +922,10 @@ Media content below max 550px
     my projects below 
   =====================*/
 
-  .title2 h1 {
-    font-size: 40px;
-    margin-bottom: revert;
-
-}
+ 
  .project-container {
     flex-wrap: wrap;
     padding-bottom: 50px;
-    height: unset;
   }
   #projectsection {
     min-height: 800px;
@@ -936,7 +935,9 @@ Media content below max 550px
     width: 150px;
     height: 150px;
   }
-
+  .text {
+    font-size: 30px;
+  }
   
 
 /*=====================  
@@ -950,7 +951,7 @@ Media content below max 550px
   height: unset;
 }
 .form-title {
-  font-size: 40px;
+  font-size: 14px;
 }
 .contact-container {
    width: 200px;
@@ -987,8 +988,6 @@ textarea.input100 {
   height: 2rem;
 }
 .up-arrow {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
   padding: 2px;
   width: 2rem;
   height: 2rem;
@@ -1005,11 +1004,14 @@ textarea.input100 {
 .scroll-up {
   right: 3%;
 }
+.line {
+  display: none
+}
 
 nav ul {
   list-style-type: none ;
   position: fixed;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   flex-direction: column;
   top: 0px;
   height: 100%;
@@ -1025,10 +1027,13 @@ nav ul {
   justify-content: center;
   padding-right: unset;
   z-index: 99;
-  gap: 20px;
+  gap: 10px;
   margin-top: 0;
   box-shadow: 0 0 10px rgb(0 0 0 / 90%);
   font-family: "GTWalsheimPro-Light";
+}
+.dark nav ul {
+  background-color: white;
 }
  nav ul li {
   margin: 10px;
@@ -1036,7 +1041,7 @@ nav ul {
 }
 nav a {
   margin: 10px;
-  font-size: 40px !important;
+  font-size: 35px !important;
   text-shadow: 0px 1px #000;
 }
 
@@ -1047,12 +1052,16 @@ nav a {
   width: 35px;
   height: 30px;
   display: unset;
+  filter: invert(1);
 }
-
+.dark.xbutton {
+  filter: invert(0);
+}
 .burger-menu {
   display: block;
   visibility: visible;
 }
+
 .burger-menu > img {
   width: 50px;
   height: 50px;
