--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,12 @@ html {
 .dark.firstScreen {
   background-color: white;
 }
-
+.dark.form-container h1 {
+  color: black;
+}
+.dark.form-text {
+  color: blac;
+}
 .swal2-popup {
   border-radius: 6px !important;
   width: 28em !important;
@@ -236,7 +241,6 @@ nav ul {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
-
 }
 
 .main-container {
@@ -269,7 +273,8 @@ nav ul {
   font-family: 'Poppins';
 }
 
-.main-container p {
+.main-container p,
+.form-text {
     font-size: 26px;
     margin-top: 0px;
     line-height: 50px;
@@ -306,7 +311,9 @@ nav ul {
     margin-right: auto;
     justify-content: space-around;
 }
-
+#projectsection {
+  padding-top: 150px;
+}
 
 
 .text {
@@ -338,17 +345,27 @@ nav ul {
     width: 150px;
 }
 
-
 .form-container {
-        width: 400px;  
-        min-height: 550px;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;      
-        padding: 15px;
-        padding-right: 20px;
-      
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+
+.form-container h1 {
+  color: white;
+  font-family: 'Poppins';
+  font-size: 100px;
+  padding-left: 50px;
+
+}
+.form-text {
+  width: 50%;
+  margin-left: unset;
+}
+.form-container a,
+.form-text {
+  align-self: center;
 }
 .contact-container {
     display: flex;
@@ -461,13 +478,11 @@ textarea.input100 {
         height: 62px;
         background-color: transparent;
         border-radius: 31px;
-      
         font-family: 'GT Walsheim Pro Bold Regular';
         font-size: 16px;
-        color: #fff;
+        color: rgb(0, 0, 0);
         line-height: 1.2;
         text-transform: uppercase;
-      
         -webkit-transition: all 0.4s;
         -o-transition: all 0.4s;
         -moz-transition: all 0.4s;
@@ -476,8 +491,9 @@ textarea.input100 {
         z-index: 1;
   }
   .form-btn span {
-    color: black;
+    color: #000000;
   }
+
   .form-btn::before {
     content: "";
     display: block;
@@ -492,10 +508,9 @@ textarea.input100 {
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: #ffffff;
     pointer-events: none;
-    
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -504,7 +519,7 @@ textarea.input100 {
   
   .form-btn:hover:before,
   .form-btn:focus::before {
-    background-color: #403866;
+    background-color: #d00202;
     width: calc(100% + 20px);
   }
   
@@ -892,14 +907,21 @@ Media content below max 550px
     filter: invert(0);
   }
   /* main container below */
+  .main-section,
+#projectsection,
+.contact-section {
+  width: 86%;
+}
   .main-section {
     min-height: 600px;
     padding-top: 80px;
   }
-  .main-container {
+  .main-container,
+  .form-container {
     justify-content: unset;
     white-space: unset;
     padding-top: 20px;
+    width: 100%;
   }
   
   .main-container h1 {
@@ -911,7 +933,8 @@ Media content below max 550px
   }
   
 
-  .main-container p {
+  .main-container p,
+  .form-text {
     padding-left: 0;
     font-size: 18px;
     line-height: 24px;
@@ -943,15 +966,38 @@ Media content below max 550px
 /*=====================  
   contact section below 
   ======================*/
+  .form-title {
+    font-size: 14px;
+    padding-bottom: 100px;
+  }
+
 .contact-section {
   min-height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: unset;
+  margin-bottom: 120px;
 }
-.form-title {
-  font-size: 14px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-bottom: 100px;
+}
+
+.form-container h1 {
+  color: white;
+  padding-left: unset;
+  font-size: 60px;
+  width: 80%;
+}
+.form-text {
+  width: 90%;
+  align-self: unset;
+}
+.form-container a {
+  align-self: unset;
 }
 .contact-container {
    width: 200px;
